logs/pyitect.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyitect'...
Listing './lib/python3.5/site-packages/pyitect-2.0.1.egg-info'...
Listing './lib/python3.5/site-packages/semantic_version'...
Listing './lib/python3.5/site-packages/semantic_version-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/plugins'...
Listing './lib/python3.5/site-packages/tests/plugins/bad_plugin'...
Compiling './lib/python3.5/site-packages/tests/plugins/bad_plugin/bad_plugin.py'...
***   File "./lib/python3.5/site-packages/tests/plugins/bad_plugin/bad_plugin.py", line 3
    def foobarbar()
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tests/plugins/component_subtype_plugin'...
Listing './lib/python3.5/site-packages/tests/plugins/consume_plugin'...
Listing './lib/python3.5/site-packages/tests/plugins/on_enable_plugin'...
Listing './lib/python3.5/site-packages/tests/plugins/provide_plugin'...
Listing './lib/python3.5/site-packages/tests/plugins/provide_pluginv2'...
Listing './lib/python3.5/site-packages/tests/plugins/relative_plugin'...
Listing './lib/python3.5/site-packages/tests/plugins/subtype_plugin'...
Listing './lib/python3.5/site-packages/tests/plugins/yaml_plugin'...
Listing './share'...
Listing './share/python-wheels'...
